# pm25-tail-benchmark

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-fm.txt  requirements-main.txt
data/: manifest.csv
data/processed/: BIRR_hourly.parquet  BMLD_hourly.parquet  KC1_hourly.parquet  MAHG_hourly.parquet  MAN3_hourly.parquet  MY1_hourly.parquet  SHBR_hourly.parquet  SHDG_hourly.parquet
docs/: DATASET_CARD.md  EXOG_SCHEMA.md  MM_CP_METHOD.md
paper/: paper.md
results/coverage/: mmcp4d_pm25.csv
results/leaderboard/: dm_bh_h24.csv  f1_tail_inputs.pkl  pairwise_tests_h24.csv  significance_h24.csv
scripts/: 00_environment_check.py  build_processed.py  dump_moirai_pm25.py  dump_moirai_preds.py  make_eda_figures.py  make_paper_figures.py  merge_leaderboard.py  poc_sheffield.py  pull_aurn.py  pull_era5.py  reproduce_f1.py  run_dm_bh_h24.py  run_moirai.py  run_pm25_analysis.py  run_pm25_mmcp4d.py  run_significance_leaderboard.py  run_trained_leaderboard.py  run_uk_leaderboard.py  significance_pm25_tail.py  validate_mm_cp_synthetic.py
src/aq_fm_bench/: __init__.py  paths.py
src/aq_fm_bench/conformal/: coverage.py  mm_cp.py  split_cp.py
src/aq_fm_bench/data/: aurn.py  era5.py  processing.py  stations.py
src/aq_fm_bench/experiments/: leaderboard.py  rolling.py
src/aq_fm_bench/metrics/: point.py
src/aq_fm_bench/models/: baselines.py  linear.py  timesfm_model.py  xgb.py  xgb_cache.py
src/aq_fm_bench/stats/: __init__.py  bootstrap.py  dm_test.py
src/aq_fm_bench/utils/: env.py  manifest.py
src/aq_fm_bench/viz/: style.py
tests/: test_bootstrap_repro.py
